kubernetes/gatewayAPI/manifests/envoy_gateway/quickstart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: backend
